cambie el color de los botones

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <div class="card-body">
             <h5 class="card-title">Desafío Curriculum</h5>
             <p class="card-text">Desafío curriculum con HTML</p>
-            <a href="https://github.com/tamarazapata/desafio-cv-portafolio.git" target="_blank" class="btn btn-dark col-12">Ir al proyecto</a>
+            <a href="https://github.com/tamarazapata/desafio-cv-portafolio.git" target="_blank" class="btn btn-primary col-12">Ir al proyecto</a>
           </div>
         </div>
         <div class="card col-4 col-md-4 m-3" card style="width: 20rem;">
@@ -167,7 +167,7 @@
           <div class="card-body">
             <h5 class="card-title">Desafío Landing page</h5>
             <p class="card-text">Desafío construcción Landing Page con HTML y CSS</p>
-            <a href="https://github.com/tamarazapata/basic-jewelry-landing.git" target="_blank" class="btn btn-dark col-12" target="_blank">Ir al proyecto</a>
+            <a href="https://github.com/tamarazapata/basic-jewelry-landing.git" target="_blank" class="btn btn-primary col-12" target="_blank">Ir al proyecto</a>
           </div>
         </div>
         <div class="card col-4 col-md-4 m-3" card style="width: 20rem;">
@@ -175,7 +175,7 @@
           <div class="card-body">
             <h5 class="card-title">Desafío Iguana</h5>
             <p class="card-text">Aplicación de Flex con maqueta</p>
-            <a href="https://github.com/tamarazapata/web-iguana.git" target="_blank" class="btn btn-dark col-12">Ir al proyecto</a>
+            <a href="https://github.com/tamarazapata/web-iguana.git" target="_blank" class="btn btn-primary col-12">Ir al proyecto</a>
           </div>
         </div>
         <div class="card col-4 col-md-4 m-3" card style="width: 20rem;">
@@ -183,7 +183,7 @@
           <div class="card-body">
             <h5 class="card-title">Desafío Cupón</h5>
             <p class="card-text">Aplicación de bootstrap</p>
-            <a href="https://github.com/tamarazapata/cupon.git" target="_blank" class="btn btn-dark col-12">Ir al proyecto</a>
+            <a href="https://github.com/tamarazapata/cupon.git" target="_blank" class="btn btn-primary col-12">Ir al proyecto</a>
           </div>
         </div>
         <div class="card col-4 col-md-4 m-3" card style="width: 20rem;">
@@ -191,7 +191,7 @@
           <div class="card-body">
             <h5 class="card-title">Desafío GitHub</h5>
             <p class="card-text">Desafío colaboración con GitHub</p>
-            <a href="https://github.com/tamarazapata/fdsw-github-test-tzg"  target="_blank" class="btn btn-dark col-12">Ir al proyecto</a>
+            <a href="https://github.com/tamarazapata/fdsw-github-test-tzg"  target="_blank" class="btn btn-primary col-12">Ir al proyecto</a>
           </div>
         </div>
       </div>
